--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,6 +12,7 @@ env:
     - PRX_LAMBDA_CODE_CONFIG_VALUE
     - PRX_SPIRE_S3_PKG_PARAMETERS
     - LAMBDA_ZIP
+    - PRX_LAMBDA_ARCHIVE_BUILD_PATH
 phases:
   pre_build:
     commands:
