--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "search.theworld.org",
   "version": "0.0.1",
   "engines": {
-    "node": ">= 12.0.0"
+    "node": ">= 18.0.0"
   },
   "description": "Search API for theworld.org",
   "main": "index.js",
@@ -19,5 +19,18 @@
   "homepage": "https://github.com/PRX/search.theworld.org#readme",
   "dependencies": {
     "googleapis": "^89.0.0"
+  },
+  "devDependencies": {
+    "eslint": "*",
+    "eslint-config-airbnb": "*",
+    "eslint-config-prettier": "*",
+    "eslint-plugin-import": "*",
+    "eslint-plugin-jsx-a11y": "*",
+    "eslint-plugin-prettier": "*",
+    "eslint-plugin-react": "*",
+    "eslint-plugin-react-hooks": "*",
+    "prettier": "*",
+    "typescript": "*",
+    "@types/node": "*"
   }
 }
