--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,13 +1,14 @@
 version: 0.2
 env:
   variables:
-    PRX_SPIRE_S3_PKG_PARAMETERS: LAMBDA_ZIP=/prx/stag/Spire/The_World-Search/pkg/s3-object-key
+    PRX_SPIRE_S3_PKG_PARAMETERS: LAMBDA_ZIP=/prx/stag/Spire/The_World-Search/pkg/s3-object-key;GOOGLEAPIS_LAYER_ZIP=/prx/stag/Spire/The_World-Search/googleapis-layer/pkg/s3-object-key
   parameter-store:
     DOCKERHUB_USERNAME: /prx/DOCKERHUB_USERNAME
     DOCKERHUB_PASSWORD: /prx/DOCKERHUB_PASSWORD
   exported-variables:
     - PRX_SPIRE_S3_PKG_PARAMETERS
     - LAMBDA_ZIP
+    - GOOGLEAPIS_LAYER_ZIP
 phases:
   pre_build:
     commands:
@@ -16,6 +17,7 @@ phases:
   build:
     commands:
       - docker build .
+      - docker build -f Dockerfile.googleapis .
   post_build:
     commands:
       - curl -sO "https://raw.githubusercontent.com/PRX/Infrastructure/main/ci/utility/post_build.sh"
