--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "engines": {
     "node": ">= 20.0.0"
   },
+  "private": "true",
   "description": "Search API for theworld.org",
   "main": "index.js",
   "repository": "git@github.com:PRX/search.theworld.org.git",
@@ -18,9 +19,10 @@
   },
   "homepage": "https://github.com/PRX/search.theworld.org#readme",
   "dependencies": {
-    "googleapis": "^126.0.0"
+    "googleapis": "^131.0.0"
   },
   "devDependencies": {
+    "@types/node": "*",
     "eslint": "*",
     "eslint-config-airbnb": "*",
     "eslint-config-prettier": "*",
@@ -30,7 +32,6 @@
     "eslint-plugin-react": "*",
     "eslint-plugin-react-hooks": "*",
     "prettier": "*",
-    "typescript": "*",
-    "@types/node": "*"
+    "typescript": "*"
   }
 }
